# django-pysonet

./: .env.dev  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
src/profiles/: models.py
