[tool.poetry]
name = "pysonet"
version = "0.1.0"
description = "Social Network by Django"
authors = ["Almaz Yessenyazov <mr.esenyazov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
Pillow = "^8.1.0"
djangorestframework = "^3.12.2"
psycopg2 = "^2.8.6"
djoser = "^2.1.0"
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
